<resources>
    <string name="app_name">Viope Math</string>
    <string name="app_name_br">Viope Math</string>
    <string name="welcome_text">Welcome!</string>
    <string name="start">START</string>
    <string name="start_br">Iniciar</string>
    <string name="welcome_br">Bem-vindo ao applicativo de equacões VIOPE!</string>
    <string name="next_button">NEXT</string>
    <string name="back_button">BACK</string>
    <string name="add">ADD</string>
    <string name="exercise1">2(3x-4)+5=3(x+1)</string>
    <string name="exercise2">3(2x+3)-5=-4(-x+3)</string>
    <string name="exercise3">(3(5x-2))/4+4=(4(4x-3))/2</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="exercise_br">Exercício</string>
    <string name="upload_answers_br">Carregar as respostas</string>
    <string name="download_questions_br">Baixar as perguntas</string>
    <string name="info">Informação</string>
    <string name="menu_button">Exercise menu</string>
    <string name="delete">Delete</string>


    <string name="homeTitle">Home Page</string>
    <string name="formulaPage">Formula Page</string>
    <string name="exercisePage">Exercise Page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="consumer_app">Consumer math learning app</string>
    <string name="welcome_app">Welcome to the Viope Math-App!</string>

    <string name="formula_hint">Input formula here!</string>
    <string name="answer_hint">Answer here!</string>
    <string name="press_start">Press start to play the game</string>
    <string name="menu_btn" translatable="false">Menu</string>

    <string name="task1">Exercise 1</string>
    <string name="task2">Exercise 2</string>
    <string name="task3">Exercise 3</string>
    <string name="task1Number" translatable="false">1/3</string>
    <string name="task2Number" translatable="false">2/3</string>
    <string name="task3Number" translatable="false">3/3</string>

    <string name="welcome">Welcome!</string>
    <string name="answerBtn">Submit</string>

    <string name="home">Home</string>
    <string name="forms">Forms</string>
    <string name="formulas">Formulas</string>
    <string name="exercises">Exercises</string>
    <string name="hint">Hint</string>
    <string name="answer">Answer</string>

    <string name="formHeader">Formula Page</string>
    <string name="discount">Discount = list price × discount rate</string>
    <string name="sale">Sale price = list price − discount</string>
    <string name="discountRate">Discount rate = discount ÷ list price</string>
    <string name="salesTax">Sales tax = price of item × tax rate</string>
    <string name="interest">Interest = principal × rate of interest × time</string>
    <string name="tips">Tips = cost of meals × tip rate</string>
    <string name="comission">Commission = cost of service × commission rate</string>

    <string name="question1TextView">Original price of a pair of shoes is 159 R$ before discount. Shoes are on sale -60 R$. How much does the shoes cost after the discount?</string>
    <string name="question1Hint">Hint: List price is 159 R$. Discount is 60 R$.</string>
    <string name="question2TextView">Phonecases original price are 19 R$. They are on sale -25%. What is the price after the discount?</string>
    <string name="question2Hint">Hint: List price is 19 R$. Discount rate is 25%.</string>
    <string name="question3TextView">A phone costs 999 R$. It was bought on sale for 699 R$. What is the discount rate?</string>
    <string name="question3Hint">Hint: Discount is 999 R$ - 699 R$ = 300 R$. List price is 999 R$.</string>
    <string name="settings_page">Settings Page</string>

    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="download_complete">Download complete</string>
    <string name="upload_complete">Upload complete</string>
    <string name="please_insert">Please insert an answer</string>

    <string name="name" translatable="false">Enter your name or student number \nAnd press upload</string>



    <string name="ln7_app_name">Raízes e frações</string>
    <string name="choose">Escolher pacote de exercício:</string>
    <string name="submit">Enviar</string>
    <string name="exercise">Resolva essa expressão matemática</string>
    <string name="next">Vá para o próximo exercício!</string>
    <string name="previousBt">&lt;</string>
    <string name="nextBt">&gt;</string>
    <string name="roots">Raízes quadradas</string>
    <string name="fracs">Frações</string>
    <string name="theory">Teoria</string>
    <string name="startFractions">Começar</string>
    <string name="theoryText">
        $$\\textit{As traduções virão mais tarde..} \\\\$$

        You can multiply fractions so that you multiply the numerators
        and the denominators (and then simplify if possible).
        $$\\\\[4ex] \\text{Example:}\\quad
        \\frac{a}{b} \\cdot \\frac{c}{d}
        = \\frac{a\\cdot c}{b\\cdot d}
        = \\frac{ac}{bd}
        \\\\[4ex]
        \\text{Example:} \\quad
        \\frac{a}{2} \\cdot \\frac{b}{c}
        = \\frac{a\\cdot b}{2\\cdot c}
        = \\frac{ab}{2c} \\\\[4ex]$$

        You can divide fractions so that you multiply the numerator by the
        reciprocal of the denominator.
        $$\\text{Example:} \\quad
        \\frac{\\frac{a}{b}}{\\frac{c}{d}}
        = \\frac{a}{b} \\cdot \\frac{d}{c}
        = \\frac{ad}{bc}
        \\\\[4ex]
        \\text{Example:} \\quad
        \\frac{\\frac{a}{3}}{2}
        = \\frac{a}{3} : 2
        = \\frac{a}{3} \\cdot \\frac{1}{2}
        = \\frac{a}{6} \\\\[4ex]$$

        If there is a shared factor in the numerator and the denominator,
        it can be cancelled.

         $$\\text{Example:} \\quad
        \\frac{10}{15}
        = \\frac{2 \\cdot \\rlap{\,/}{5}}{3 \\cdot \\rlap{\,/}{5}}
        = \\frac{2}{3}
        \\\\[4ex]

        \\text{Example:} \\quad
        \\frac{a \\rlap{\,/}{x}y}{bz \\rlap{\,/}{x}}
        = \\frac{ay}{bz}
        \\\\[4ex]

        \\text{Example:} \\quad
        \\frac{w(a-2)}{a-2}
        = \\frac{w \\cdot (a-2)}{1 \\cdot (a-2)}
        = w
        \\\\[4ex]$$

        You may have to factor to be able to reduce the fraction.

         $$\\text{Example:} \\quad
        \\frac{ab+ac}{b+c}
        = \\frac{a \\cdot (b+c)}{(b+c)}
        = a
        \\\\[4ex]$$

        You can factor a fraction by any number or expression,
        zero excluded. Factoring means that both the numerator and
        the denominator are multiplied by the same expression.

        $$\\text{Example:} \\quad
        \\frac{a}{b}
        = \\frac{2a}{2b}
        \\\\[4ex]$$

        If fractions have the same denominator, you can add or subtract
        them so that you add or subtract only the numerators,
        and keep that same denominator.

        $$\\text{Example:} \\quad
        \\frac{5}{2} + \\frac{4}{2}
        = \\frac{5+4}{2}
        = \\frac{9}{2}
        \\\\[4ex]

        \\text{Example:} \\quad
        \\frac{2}{s} + \\frac{x}{s}
        = \\frac{2+x}{s}
        \\\\[4ex]

         \\text{Example:} \\quad
        \\frac{2x}{x+1} - \\frac{5}{x+1}
        = \\frac{2x-5}{x+1}
        \\\\[4ex]
        $$

        If necessary, you must factor the fractions before adding or subtracting
        so that they have the same denominator.

        $$\\text{Example:} \\quad$$
        $$^{2)}\\frac{1}{7} + ^{7)}\\frac{3}{2}$$
        $$= \\frac{2 \\cdot 1}{2 \\cdot 7} + \\frac{7 \\cdot 3}{7 \\cdot 2}$$
        $$= \\frac{2+21}{14}$$
        $$= \\frac {23}{14}$$
        $$\\\\[4ex]$$

        $$\\text{Example:} \\quad$$
        $$\\frac{1}{6x} + ^{2)}\\frac{5}{3x} + ^{3)}\\frac{3}{2x}$$
        $$ = \\frac{1}{6x} + \\frac{10}{6x} + \\frac{9}{6x}$$
        $$ = \\frac{1+10+9}{6x}$$
        $$= \\frac {20}{6x}$$
        $$= \\frac {10}{3x}$$
        $$\\\\[4ex]$$

        $$\\text{Example:} \\quad$$
        $$^{a)}\\frac{5}{b} - ^{b)}\\frac{4}{a}$$
        $$= \\frac{5a}{ab} - \\frac{4b}{ab}$$
        $$= \\frac{5a-4b}{ab}$$
    </string>
</resources>
