<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgLight"
    tools:context="application.viope.math.combinedapp.EquListActivity">

    <ImageView
        android:id="@+id/correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/equ_checkmark" />


    <!-- YHTÄLÖTEKSTI -->
    <TextView
        android:id="@+id/equasionTextView"
        style="@style/EquasionTextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp" />

    <!-- LISTA -->
    <ListView
        android:id="@+id/eList"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="36dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:textAlignment="center"
        android:textColor="@color/textDark"
        android:layout_below="@+id/equasionTextView"
        android:layout_centerHorizontal="true"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true">

        <!-- BACK-BUTTON -->
        <ImageButton
            android:id="@+id/backButton"
            style="@style/NavButtonTheme"
            android:contentDescription="@string/back_button"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="backButtonClicked"
            android:src="@drawable/equ_back"
            android:text="@string/back_button" />

        <!-- MENU-BUTTON -->
        <ImageButton
            android:id="@+id/menuButton"
            style="@style/NavButtonTheme"
            android:contentDescription="@string/menu_button"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="menuButtonClicked"
            android:src="@drawable/equ_menu" />

        <!-- INFO-BUTTON-->
        <ImageButton
            android:id="@+id/infoButton"
            style="@style/NavButtonTheme"
            android:contentDescription="@string/info"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="infoButtonClicked"
            android:src="@drawable/equ_info" />

        <!-- NEXT-BUTTON -->
        <ImageButton
            android:id="@+id/nextButton"
            style="@style/NavButtonTheme"
            android:contentDescription="@string/next_button"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:onClick="nextButtonClicked"
            android:src="@drawable/equ_next"
            android:text="@string/next_button" />

    </LinearLayout>

    <EditText
        android:id="@+id/inputListItem"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="none"
        android:layout_above="@+id/keyboardview"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textIsSelectable="true"/>


    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        style="@style/KeyboardTheme"
        />

    <!-- ADD-BUTTON -->
    <ImageButton
        android:id="@+id/addListButton"
        style="@style/AddButtonTheme"
        android:contentDescription="@string/add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addButtonClicked"
        android:text="@string/add"
        android:layout_above="@+id/keyboardview"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@+id/inputListItem"
        android:layout_toEndOf="@id/inputListItem"/>

    <!-- DELETE-BUTTON -->
    <ImageButton
        android:id="@+id/delButton"
        style="@style/DelButtonTheme"
        android:contentDescription="@string/delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="deleteButtonClicked"
        android:layout_above="@+id/keyboardview"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toLeftOf="@+id/inputListItem"
        android:layout_toStartOf="@id/inputListItem"/>

</RelativeLayout>