<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#21618C">

    <EditText
        android:id="@+id/todoText"
        android:textColor="#FFFFFF"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/formsBtn"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/upload"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_below="@+id/todoText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/download"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_below="@+id/downloadBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/uploadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/upload_pressed"
        android:gravity="center"
        android:layout_below="@+id/upload"
        android:layout_alignLeft="@+id/downloadBtn"
        android:layout_alignStart="@+id/downloadBtn" />

    <ImageButton
        android:id="@+id/downloadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/download_pressed"
        android:gravity="center"
        android:layout_below="@+id/uploadBtn"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:layout_below="@+id/download"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/name"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/todoText"
        android:layout_alignStart="@+id/todoText"
        android:layout_below="@+id/listview"
        android:layout_marginTop="13dp"
        android:text="@string/name" />

    <ListView
        android:id="@+id/listview"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/uploadBtn"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:layout_toLeftOf="@+id/uploadBtn"
        android:layout_below="@+id/todoText"
        android:layout_alignParentBottom="true" />

</RelativeLayout>